# naviora-blue-stratum

./: .gitignore  .replit  docker-compose.yml  pyproject.toml  replit.md
attached_assets/: Pasted--Naviora-by-Blue-Stratum-Assessment-Engine-Refactor-Rev_1781244452064.txt  Pasted--Naviora-by-Blue-Stratum-Security-Encryption-GDPR-Compl_1781164990327.txt  Pasted--Naviora-by-Blue-Stratum-Sprint-2-1-Simulator-Integrati_1781162901320.txt  Pasted--Naviora-by-Blue-Stratum-Sprint-2-2-Maritime-Master-Dat_1781165554850.txt  Pasted--Naviora-by-Blue-Stratum-Sprint-2-3-Exercise-Builder-Va_1781168966861.txt  Pasted--Naviora-by-Blue-Stratum-Sprint-2-4-Assessment-Engine-B_1781243137863.txt  Pasted--Naviora-by-Blue-Stratum-Sprint-2-5-Assessment-Particip_1781858955669.txt  Pasted--Naviora-by-Blue-Stratum-Sprint-2-6-Admin-User-Manageme_1782192377488.txt  Pasted--Naviora-by-Blue-Stratum-Sprint-2-6A-Platform-Settings-_1782195189961.txt  Pasted--Naviora-by-Blue-Stratum-Sprint-2-7-Organizations-Organ_1782195258494.txt  Pasted--Naviora-by-Blue-Stratum-Sprint-2-8-Assessment-Campaign_1782199605018.txt  Pasted--Naviora-by-Blue-Stratum-Sprint-2-8B-Candidate-Portal-F_1782220933472.txt  Pasted--Naviora-by-Blue-Stratum-Sprint-2-9-Simulator-Runtime-S_1782202227901.txt  Pasted--Naviora-by-Blue-Stratum-Sprint-3-1-Certificate-Managem_1782218442884.txt  Pasted--Naviora-by-Blue-Stratum-Sprint-Commercial-Plans-Entitl_1781963027172.txt  Pasted--Naviora-by-Blue-Stratum-Sprint-Lead-Management-Enquiri_1782106479916.txt  Pasted--PASE-Compass-by-Blue-Stratum-Enterprise-Foundation-Set_1781069277043.txt  (+1 more)
(+564 files in other folders)
