[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "bcrypt==4.2.1",
    "email-validator==2.2.0",
    "fastapi==0.115.5",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary==2.9.10",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.18",
    "sqlalchemy[asyncio]==2.0.36",
    "uvicorn[standard]==0.32.1",
]
